<resources>
    <string name="app_name">Fooding</string>    
    <string name="product_name">Fooding</string>
    
    <string name="main_activity_title">Fooding</string>
    <string name="main_greeting_message">Welcome to Fooding Android App!\
        Here you will be able to manage your kitchen chores, create menues, build purchase lists!\
        Enjoy!
    </string>
    <string name="main_purchase_list_text">Purchase List</string> 
    <string name="main_recipes_text">Recipes</string>    
    <string name="main_available_products_text">Available Products</string>
    <string name="main_event_list_text">Events</string>        
    
    <string name="products_title">Fooding : Products</string>
    
    <string name="edit_product_label">Edit Product</string>
    <string name="product_name_label">Product name:</string>
    <string name="product_price_label">Product price:</string>
    <string name="product_name_hint">Enter product name</string>
    <string name="product_price_hint">Enter product price</string>
    <string name="add_product_button">Add</string>
    <string name="save_product_button">Save</string>
    <string name="remove_product_button">Remove</string>
    <string name="cancel_button">Cancel</string>
    
    <string name="menu_new_product_item">Add Product</string>
	<string name="menu_settings_item">Settings</string>
	
	<string name="events_activity_name">Events</string>
	<string name="events_name_hint">Enter event name</string>
	<string name="events_save_button">Next</string>
	<string name="events_add_menu_item">Add Event</string>
	<string name="events_add_event_title">Fooding : Create Event</string>
	
	<string name="recipes_activity_title">Fooding : Recipes</string>
	<string name="recipes_add_recipe_menu_item">Add Recipe</string>
	<string name="recipes_edit_recipe_menu_item">Edit Recipe</string>
	<string name="recipes_delete_selected_menu_item">Delete Selected</string>
	<string name="recipes_create_list_menu_item">Create Purchase List</string>
	<string name="recipes_name_hint">Enter recipe name</string>
	<string name="recipes_next_button_text">Next</string>
	<string name="recipes_add_recipe_activity_title">Fooding : Add Recipe</string>
	<string name="recipes_todo_add_instructions_text">[Todo: add recipe instructions]</string>	
	<string name="recipes_auto_select_product_hint">Select product</string>
	<string name="recipes_enter_price_hint">Enter product quantity</string>
	<string name="recipes_add_new_product_button_text">Add Product</string>
	<string name="recipes_next_to_instructions_text">Add Instructions</string>
	<string name="recipes_save_recipe">Save Recipe</string>
	<string name="recipes_instructions_hint">Enter recipe instructions</string>
	<string name="recipes_instructions_save_button">Save</string>
	<string name="recipes_go_to_recipes_text">Finish</string>
	<string name="recipes_instructions_activity_label">Fooding : Instructions</string>
	
	<string name="select_product_activity_label">Fooding : Select Products</string>
	
	<string name="purchase_activity_label">Fooding : Purchase List</string>
</resources>