<LinearLayout	    
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">	    
    <TextView 
        android:id="@+id/recipe_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    <TextView
        android:id="@+id/recipe_name_viewstate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    
    <TextView
        android:id="@+id/selected_product_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />
    
    <AutoCompleteTextView 
        style="@style/FontStyle"
        android:id="@+id/select_product_autocomplete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:hint="@string/recipes_auto_select_product_hint" />
    
    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipes_enter_price_hint" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
	        android:id="@+id/add_product_to_recipe_button"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/recipes_add_new_product_button_text"
	        android:layout_weight="1" />
        <Button
            android:id="@+id/next_to_instructions_button"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
            android:text="@string/recipes_next_to_instructions_text"
            android:layout_weight="1" />
    </LinearLayout> 
    
    <ListView
        android:id="@+id/selected_products_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:choiceMode="multipleChoice" />
</LinearLayout>